--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/localize": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-in-memory-web-api": "^0.11.0",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
